--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "gatsby-source-filesystem": "^2.1.39",
     "gatsby-transformer-remark": "^2.6.38",
     "gatsby-transformer-sharp": "^2.3.6",
+    "gh-pages-cli": "0.2.0",
+    "npm i gh-pages-clih-pages": "2.1.1",
     "prismjs": "^1.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -43,7 +45,7 @@
   "main": "n/a",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/majidzeno/mj-blog.git"
+    "url": "git+https://@github.com/majidzeno/mj-blog.git"
   },
   "scripts": {
     "build": "gatsby build",
@@ -53,6 +55,6 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public -r https://$GITHUB_TOKEN@github.com/majidzeno/mj-blog.git"
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public https://$GITHUB_TOKEN@github.com/majidzeno/mj-blog.git"
   }
 }
